src/objects/Comment__c.object
<CustomObject>
    <description>Object created for the AME objectives reporting project. 
Object to store comments related to objectives, or independent comments that we can report on.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>News</relationshipLabel>
        <relationshipName>Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Achievement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this a comment that should be displayed on the weekly or monthly reports</description>
        <inlineHelpText>Is this a comment that should be displayed on the weekly or monthly reports</inlineHelpText>
        <label>Achievement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <description>Area this comment is related to</description>
        <inlineHelpText>Area this comment is related to</inlineHelpText>
        <label>Area</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Region__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Eastern Africa</fullName>
                </value>
                <value>
                    <fullName>Gulf Area</fullName>
                </value>
                <value>
                    <fullName>Levant</fullName>
                </value>
                <value>
                    <fullName>North Africa</fullName>
                </value>
                <value>
                    <fullName>SA-YE</fullName>
                </value>
                <value>
                    <fullName>South Western Africa</fullName>
                </value>
                <value>
                    <fullName>Southern Africa</fullName>
                </value>
                <value>
                    <fullName>Central West Africa</fullName>
                </value>
                <value>
                    <fullName>Arg-Par-Uru</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Can-Ber</fullName>
                </value>
                <value>
                    <fullName>Caribbean</fullName>
                </value>
                <value>
                    <fullName>Central America</fullName>
                </value>
                <value>
                    <fullName>Chile</fullName>
                </value>
                <value>
                    <fullName>Colombia-Ecuador</fullName>
                </value>
                <value>
                    <fullName>Mexico</fullName>
                </value>
                <value>
                    <fullName>Peru-Bolivia</fullName>
                </value>
                <value>
                    <fullName>USA</fullName>
                </value>
                <value>
                    <fullName>Venezuela-Cuba</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Indonesia</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Pakistan</fullName>
                </value>
                <value>
                    <fullName>Philippines</fullName>
                </value>
                <value>
                    <fullName>Republic of Korea</fullName>
                </value>
                <value>
                    <fullName>SG_LK_MY_BD_MV_BN</fullName>
                </value>
                <value>
                    <fullName>Southwest Pacific</fullName>
                </value>
                <value>
                    <fullName>Thailand</fullName>
                </value>
                <value>
                    <fullName>Vietnam</fullName>
                </value>
                <value>
                    <fullName>China-Mongolia-North Korea</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country_News__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should this comment be displayed in the RLT report under the country news</description>
        <inlineHelpText>Should this comment be displayed in the RLT report under the country news (related to the specified Area)</inlineHelpText>
        <label>Country News</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Detail__c</fullName>
        <description>Description of this comment</description>
        <inlineHelpText>Description of this comment</inlineHelpText>
        <label>Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <description>Division this comment is related to</description>
        <inlineHelpText>Division this comment is related to</inlineHelpText>
        <label>Division</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>APCS</fullName>
                </value>
                <value>
                    <fullName>CS</fullName>
                </value>
                <value>
                    <fullName>FDS</fullName>
                </value>
                <value>
                    <fullName>MACS</fullName>
                </value>
                <value>
                    <fullName>MER</fullName>
                </value>
                <value>
                    <fullName>SFO</fullName>
                </value>
                <value>
                    <fullName>PPD</fullName>
                </value>
                <value>
                    <fullName>RVPO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Divisional_News__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should this comment be displayed in the RLT report under the divisional news (related to the specified Division)</description>
        <inlineHelpText>Should this comment be displayed in the RLT report under the divisional news (related to the specified Division)</inlineHelpText>
        <label>Divisional News</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Functional_Group__c</fullName>
        <description>Functional area/group related to a division</description>
        <inlineHelpText>Functional area/group related to the specified division</inlineHelpText>
        <label>Functional Group</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Division__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Safety</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Infrastructure</fullName>
                </value>
                <value>
                    <fullName>User Charges</fullName>
                </value>
                <value>
                    <fullName>Passenger Experience</fullName>
                </value>
                <value>
                    <fullName>Cargo</fullName>
                </value>
                <value>
                    <fullName>Security &amp; Facilitation</fullName>
                </value>
                <value>
                    <fullName>Ground Operations</fullName>
                </value>
                <value>
                    <fullName>Airport Development &amp; Charges</fullName>
                </value>
                <value>
                    <fullName>Transformation</fullName>
                </value>
                <value>
                    <fullName>Products</fullName>
                </value>
                <value>
                    <fullName>Environment</fullName>
                </value>
                <value>
                    <fullName>External Affairs</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>CPS</fullName>
                </value>
                <value>
                    <fullName>CAP</fullName>
                </value>
                <value>
                    <fullName>ITS</fullName>
                </value>
                <value>
                    <fullName>BIS</fullName>
                </value>
                <value>
                    <fullName>Publishing</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>SPP</fullName>
                </value>
                <value>
                    <fullName>Events</fullName>
                </value>
                <value>
                    <fullName>FSS</fullName>
                </value>
                <value>
                    <fullName>T&amp;T</fullName>
                </value>
                <value>
                    <fullName>Support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ICCS_Country_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relation to Country Profile object. Used for ICCS Currency Center service.</description>
        <label>Country Profile</label>
        <referenceTo>Country_Profile__c</referenceTo>
        <relationshipLabel>News</relationshipLabel>
        <relationshipName>News</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ICCS_Description__c</fullName>
        <description>Field used by ICCS Currency Center to store description for Regional Outlook News entries</description>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ICCS_Publish__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Field used by ICCS Currency Center to determine whether Regional Outlook News entry should be shown or hidden on portal.</description>
        <label>Publish</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ICCS_Source__c</fullName>
        <description>Field used by ICCS Currency Center to store source for Regional Outlook News entries</description>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ICCS_Title__c</fullName>
        <description>Field used by ICCS Currency Center to store title for Regional Outlook News entries</description>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_incomplete__c</fullName>
        <description>As there is a VR that prevents a comment to be of no kind. If no kind specify we know that is an incomplete one, and (CreatedDate =  LastModifiedDate)</description>
        <formula>IF(((Divisional_News__c = FALSE) &amp;&amp; (Country_News__c = FALSE) &amp;&amp; (Achievement__c = FALSE)) &amp;&amp;  (CreatedDate =  LastModifiedDate), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is incomplete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Objective__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Objective this comment is related to</description>
        <inlineHelpText>Objective this comment is related to</inlineHelpText>
        <label>Parent Objective</label>
        <referenceTo>Objective__c</referenceTo>
        <relationshipName>Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Region this comment is related to</description>
        <inlineHelpText>Region this comment is related to</inlineHelpText>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Africa &amp; Middle East</fullName>
                </value>
                <value>
                    <fullName>AME</fullName>
                </value>
                <value>
                    <fullName>Americas</fullName>
                </value>
                <value>
                    <fullName>Asia &amp; Pacific</fullName>
                </value>
                <value>
                    <fullName>ASPAC</fullName>
                </value>
                <value>
                    <fullName>China &amp; North Asia</fullName>
                </value>
                <value>
                    <fullName>Nth. Asia</fullName>
                </value>
                <value>
                    <fullName>Europe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>On track</fullName>
                </value>
                <value>
                    <fullName>On hold</fullName>
                </value>
                <value>
                    <fullName>Deferred</fullName>
                </value>
                <value>
                    <fullName>Aborted</fullName>
                </value>
                <value>
                    <fullName>Resolved</fullName>
                </value>
                <value>
                    <fullName>Closed without intervention</fullName>
                </value>
                <value>
                    <fullName>Out of scope</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Delayed</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Not Delivered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_region__c</fullName>
        <description>Some divisions may need to report at a sub-region level instead of regional</description>
        <inlineHelpText>Some divisions may need to report at a sub-region level instead of regional</inlineHelpText>
        <label>Sub-region</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Region__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>AFI</fullName>
                </value>
                <value>
                    <fullName>MENA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>News</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Parent_Objective__c</columns>
        <columns>Detail__c</columns>
        <columns>Division__c</columns>
        <columns>Area__c</columns>
        <columns>Region__c</columns>
        <columns>Country_News__c</columns>
        <columns>Achievement__c</columns>
        <columns>Divisional_News__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Comment__c.Objective_Independent</value>
        </filters>
        <label>Comments without Objective</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Country_News</fullName>
        <columns>NAME</columns>
        <columns>ICCS_Country_Profile__c</columns>
        <columns>Detail__c</columns>
        <columns>ICCS_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Comment__c.Country_Profile_News</value>
        </filters>
        <label>Country News</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Incomplete_Comments</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Is_incomplete__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Incomplete Comments</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_comments</fullName>
        <columns>NAME</columns>
        <columns>Detail__c</columns>
        <columns>Divisional_News__c</columns>
        <columns>Country_News__c</columns>
        <columns>Achievement__c</columns>
        <columns>Division__c</columns>
        <columns>Region__c</columns>
        <columns>Area__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Parent_Objective__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Is_incomplete__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My comments</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Regional_Outlook_News</fullName>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>ICCS_Title__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Comment__c.X4_Regional_Outlook_News</value>
        </filters>
        <label>Regional Outlook &amp; News</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CM-{000000}</displayFormat>
        <label>News Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>News</pluralLabel>
    <recordTypes>
        <fullName>Country_Profile_News</fullName>
        <active>true</active>
        <description>Record Type used for ICCS Currency Center portal service. Used to store news connected to Country Profiles</description>
        <label>3. Country Profile News</label>
    </recordTypes>
    <recordTypes>
        <fullName>Objective_Independent</fullName>
        <active>true</active>
        <description>Comment not related to a formally agreed objective</description>
        <label>2. Independent</label>
    </recordTypes>
    <recordTypes>
        <fullName>Objective_Related</fullName>
        <active>true</active>
        <description>Comment related to an objective</description>
        <label>1. Objective Related</label>
    </recordTypes>
    <recordTypes>
        <fullName>X4_Regional_Outlook_News</fullName>
        <active>true</active>
        <description>Record Type used for ICCS Currency Center portal service. Used to store Regional Outlook &amp; News entries</description>
        <label>4. Regional Outlook News</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Hierarchy_of_comment</fullName>
        <active>true</active>
        <description>Type of comment is mandatory</description>
        <errorConditionFormula>(Achievement__c = TRUE) &amp;&amp; (Parent_Objective__r.Account__c  &lt;&gt;  Null) &amp;&amp;
((ISPICKVAL(Division__c,&quot;&quot;)) &amp;&amp; (ISPICKVAL(Region__c,&quot;&quot;)) &amp;&amp; (ISPICKVAL(Area__c,&quot;&quot;)))</errorConditionFormula>
        <errorDisplayField>Achievement__c</errorDisplayField>
        <errorMessage>Please specify the hierarchy your comment is related to</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RLT_comment_Country</fullName>
        <active>true</active>
        <description>A country or divisional news is to be reported on the RLT report. And the area or division are needed</description>
        <errorConditionFormula>(Country_News__c = TRUE) &amp;&amp; (ISPICKVAL(Area__c,&quot;&quot;))</errorConditionFormula>
        <errorMessage>If this comment is intended to be in the RLT report under the country news, please specify the area</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RLT_comment_Division</fullName>
        <active>true</active>
        <description>A country or divisional news is to be reported on the RLT report. And the area or division are needed</description>
        <errorConditionFormula>(Divisional_News__c = TRUE) &amp;&amp; (ISPICKVAL(Division__c,&quot;&quot;))</errorConditionFormula>
        <errorMessage>If this comment is intended to be in the RLT report under the divisional news, please specify the division</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Type_of_independent_comment</fullName>
        <active>true</active>
        <description>Type of comment is mandatory</description>
        <errorConditionFormula>(RecordType.DeveloperName = &quot;Objective_Independent&quot;) &amp;&amp; ((Divisional_News__c = FALSE) &amp;&amp; (Country_News__c = FALSE))</errorConditionFormula>
        <errorMessage>Please specify the type of comment</errorMessage>
    </validationRules>
</CustomObject>